--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,3 +1,13 @@
+<header>
+<img src="../033-books.png">
+<h1>My Travel Library</h1>
+</header>
+
+<div class="subheading">
+<img src="../009-book-black.png">
+<h2>Create a new place</h2>
+</div>
+
 <%= form_with :model => @place do |form| %>
   <p>
     <%= form.label "name", "Place name" %>
