--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,11 +1,20 @@
-<h1>Places I've Been</h1>
- 
- <ul>
-   <% for place in @places %>
-    <li>
-      <a href="/places/<%= place["id"] %>"><%= place["name"] %></a>
-    </li>
-   <% end %>
-</ul>
+<header>
+<img src="033-books.png">
+<h1>My Travel Library</h1>
+</header>
 
-<p><a href="/places/new">New place</a></p>
+<h2>Journals</h2>
+
+<% for place in @places %>
+  <a href="/places/<%= place["id"] %>">
+  <div class="place">
+  <p class="placename"><%= place["name"] %></p>
+  <img src="025-journal.png">
+  </div>
+  </a>
+<% end %>
+
+<div class="placenew">
+<img src="009-book-white.png">
+<a href="/places/new">New place</a>
+</div>
