--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,11 +1,187 @@
-h1 {
-    color: red
+/* Application styles */
+a {
+    text-decoration: none;
 }
 
-h2 {
-    color: red
+a:visited {
+    color: black;
 }
 
-body {
-    background-color: aqua;
+header {
+    background-color: #e5cab9;
+}
+
+header img {
+    height: 50px;
+    padding: 5px;
+    display: inline-block;
+}
+
+header h1 {
+    display: inline-block;
+    padding: 5px;
+    height: 50px;
+    line-height: 50px;;
+    margin: 0px;
+    vertical-align: top;
+}
+
+p.placename {
+    text-align: center;
+    padding: 10px;
+    font-weight: bold;
+}
+
+div.place {
+    display: inline-block;
+    background-color: #fce5cd;
+    width: 100px;
+    height: 200px;
+    margin-top:20px;
+    margin-left:5px;
+    margin-right: 5px;
+    margin-bottom:20px;
+    border-color: black;
+    border-width: 1px;
+    border-style: solid;
+}
+
+div.place img {
+    display: block;
+    width: 50px;
+    margin-left:auto;
+    margin-right: auto;
+}
+
+
+div.placenew {
+    display: inline-block;
+    width: 100%;
+    background-color: 	#918081;
+}
+
+div.placenew img {
+    height: 50px;
+    padding: 5px;
+    display: inline-block;
+}
+
+div.placenew a {
+    display: inline-block;
+    padding: 5px;
+    height: 50px;
+    line-height: 50px;;
+    margin: 0px;
+    vertical-align: top;
+    color: white;
+}
+
+
+div.subheading {
+    display: inline-block;
+    width: 100%;
+}
+
+div.subheading img {
+    height: 50px;
+    padding: 5px;
+    display: inline-block;
+}
+
+div.subheading h2 {
+    display: inline-block;
+    padding: 5px;
+    height: 50px;
+    line-height: 50px;;
+    margin: 0px;
+    vertical-align: top;
+    color: black;
+}
+
+div.placenew a:visited {
+    color: white;
+}
+
+div.journalentry {
+    display:inline-block;
+    width: 75%;
+    padding: 20px;
+    margin: 20px;
+    border-color: black;
+    border-width: 1px;
+    border-style: solid;
+    background-color: #F5F5F5;
+}
+
+
+h1 { 
+    font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif; 
+    font-size: 24px; 
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight: 700; 
+    line-height: 26.4px; 
+}
+
+h2 { 
+    font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif; 
+    font-size: 18px; 
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight: 700; 
+    line-height: 15.4px; 
+}
+
+p { 
+    font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif; 
+    font-size: 14px; 
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight: 400; 
+    line-height: 20px; 
+}
+
+button { 
+    font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif; 
+    font-size: 14px; 
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight: 400; 
+    line-height: 20px; 
+    background-color: #F5F5F5;
+    color: red;
+    border-color: black;
+    border-width: 1px;
+    border-style: solid;
+}
+
+input { 
+    font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif; 
+    font-size: 14px; 
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight: 400; 
+    line-height: 20px; 
+    background-color: #F5F5F5;
+    border-color: black;
+    border-width: 1px;
+    border-style: solid;
+}
+
+blockquote { 
+    font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif; 
+    font-size: 21px; 
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight: 400; 
+    line-height: 30px; 
+}
+
+pre { 
+    font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif; 
+    font-size: 13px; 
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight: 400; 
+    line-height: 18.5714px; 
 }
