--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -3,7 +3,7 @@
 <h1>My Travel Library</h1>
 </header>
 
-<h2>Journals</h2>
+<h2>All Places</h2>
 
 <% for place in @places %>
   <a href="/places/<%= place["id"] %>">
@@ -16,5 +16,5 @@
 
 <div class="placenew">
 <img src="009-book-white.png">
-<a href="/places/new">New place</a>
+<a href="/places/new">New Place</a>
 </div>
