--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -24,4 +24,4 @@
 
 
 <p><a href="/places">Back to All Places</a></p>
-<p><%= button_to "Delete this place", @company, method: :delete %></p>
+<p><%= button_to "Delete this Place", @company, method: :delete %></p>
