--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -5,7 +5,7 @@
 
 <div class="subheading">
 <img src="../018-textbook-black.png">
-<h2>New post for <%= @place["name"] %></h2>
+<h2>New Post for <%= @place["name"] %></h2>
 </div>
 
 <%= form_with :model => @post do |form| %>
